--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
+        <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.github.fogeid</groupId>
     <artifactId>graphql-spring-boot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>graphql-spring-boot</name>
-    <description>Demo project for Spring Boot</description>
+    <description>graphql-spring-boot</description>
     <properties>
         <java.version>11</java.version>
     </properties>
